Modified project name

--- a/ReactiveWithJavaFlowAPI/pom.xml
+++ b/ReactiveWithJavaFlowAPI/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>ReactiveWithJava9</artifactId>
+	<artifactId>ReactiveWithJavaFlowAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>ReactiveWithJava9</name>
+	<name>ReactiveWithJavaFlowAPI</name>
 	<description>Demo project for Spring Boot</description>
 	
 	<properties>
